fixed: footer doesn't overlap
set width to 47.2%

--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 47.2%;
 }
 #restaurant-name {
   color: #f18200;
